better slots with mdx

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,9 @@ import ThemeIcon from "./ThemeIcon.astro";
 
 <div class="flex items-center justify-between w-full px-8 pt-8">
     <div class="flex items-center gap-2">
-        <h1 class="text-xl">Colton Loftus</h1>
+        <p class="text-xl">
+            <a href="/"> Colton Loftus </a>
+        </p>
         <ThemeIcon />
     </div>
     <nav>
