--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,17 @@
 ---
-import Layout from "../layouts/Layout.astro";
+import CenteredText from "../layouts/CenteredText.astro";
 ---
 
-<Layout>
-    <h1 class="text-center text-2xl pt-8">Hi I'm Colton!</h1>
-    <p class="text-center pt-8">I'm a software developer</p>
-</Layout>
+<CenteredText>
+    <h1 class="text-center text-2xl pt-20">Hi I'm Colton!</h1>
+    <p>
+        I'm an open source software developer working on global water data
+        infrastructure for the Lincoln Institute of Land Policy.
+    </p>
+    <p>In my spare time I am interested in the Linux accessibility ecosystem</p>
+    <p>
+        Feel free to reach out on my <a class="underline" href="/contact"
+            >contact
+        </a>page
+    </p></CenteredText
+>
