--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,12 +5,12 @@ const currentPath = Astro.url.pathname;
 
 <div class="flex items-center justify-between w-full px-8 pt-8">
     <div class="flex items-center gap-2">
-        <p class="text-xl">
-            <a href="/"> Colton Loftus </a>
+        <p class="text-2xl">
+            <a href="/" class="!no-underline"> Colton Loftus </a>
         </p>
         <ThemeIcon />
     </div>
-    <nav>
+    <nav class="overflow-x-auto">
         <ul class="navbar flex gap-2">
             {
                 [
@@ -23,7 +23,11 @@ const currentPath = Astro.url.pathname;
                     <li>
                         <a
                             href={path}
-                            class={currentPath === path ? "underline" : ""}
+                            class={
+                                currentPath === path
+                                    ? "underline"
+                                    : "!no-underline"
+                            }
                         >
                             {name}
                         </a>
