--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,20 +24,13 @@ import Themes from "astro-themes";
 			top: 0;
 			right: 0;
 			left: 0;
-			z-index: 1030;
 		"
 		>
 		</div>
 		<Header />
+
 		<main>
 			<slot />
 		</main>
-	</body><style>
-		html,
-		body {
-			margin: 0;
-			width: 100%;
-			height: 100%;
-		}
-	</style>
+	</body>
 </html>
