--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -9,6 +9,7 @@ import Layout from "../layouts/Layout.astro";
         method="POST"
         class="max-w-xl mt-20 mx-auto p-6 bg-gray-100 dark:bg-neutral-800 rounded-xl shadow-md space-y-6"
     >
+        <h2 class="text-2xl opacity-40">Contact me</h2>
         <p class="space-y-2">
             <label
                 for="email"
@@ -42,7 +43,7 @@ import Layout from "../layouts/Layout.astro";
                 type="submit"
                 class="px-6 py-3 rounded-md bg-neutral-200 dark:bg-neutral-600 dark:text-gray-100 font-semibold hover:opacity-70 hover:cursor-pointer"
             >
-                Send
+                Submit
             </button>
         </div>
     </form>
@@ -50,27 +51,31 @@ import Layout from "../layouts/Layout.astro";
     <div class="max-w-xl mx-auto mt-12 text-gray-900 dark:text-gray-100">
         <h1 id="my-links" class="text-2xl font-bold mb-4">My Links</h1>
         <ul class="list-disc list-inside space-y-2">
-            <li>
-                <a
-                    href="https://www.linkedin.com/in/coltonl/"
-                    class="underline hover:text-gray-700 dark:hover:text-gray-300"
-                    >LinkedIn</a
-                >
-            </li>
-            <li>
-                <a
-                    href="https://github.com/C-Loftus"
-                    class="underline hover:text-gray-700 dark:hover:text-gray-300"
-                    >Github</a
-                >
-            </li>
-            <li>
-                <a
-                    href="https://talonvoice.slack.com/team/U02S1LGCH9A"
-                    class="underline hover:text-gray-700 dark:hover:text-gray-300"
-                    >Talon Slack (@Colton Loftus)</a
-                >
-            </li>
+            {
+                [
+                    {
+                        name: "LinkedIn",
+                        href: "https://www.linkedin.com/in/coltonl/",
+                    },
+                    {
+                        name: "Github",
+                        href: "https://github.com/C-Loftus",
+                    },
+                    {
+                        name: "Talon Slack (@Colton Loftus)",
+                        href: "https://talonvoice.slack.com/team/U02S1LGCH9A",
+                    },
+                ].map(({ name, href }) => (
+                    <li>
+                        <a
+                            href={href}
+                            class="underline hover:text-gray-700 dark:hover:text-gray-300"
+                        >
+                            {name}
+                        </a>
+                    </li>
+                ))
+            }
         </ul>
     </div>
 </Layout>
