--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,8 +5,8 @@ import colton from "../assets/colton.png";
 ---
 
 <Layout>
-    <div class="flex items-start justify-center min-h-screen">
-        <div class="flex flex-col items-center mt-25">
+    <div class="flex items-start justify-center">
+        <div class="items-center mt-25">
             <Image
                 src={colton}
                 alt="Colton Loftus"
@@ -14,7 +14,6 @@ import colton from "../assets/colton.png";
                 class="mx-auto rounded-full h-[12.5rem] w-[12.5rem] object-cover"
             />
             <p class="mt-4 text-center text-2xl font-bold">Colton Loftus</p>
-
             <p class="mt-4 text-center text-lg max-w-[20rem] px-4">
                 Geospatial Software Engineer
             </p>
