--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,26 @@
 @import "tailwindcss";
 
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
+
+ul {
+    font-size: large
+}
+
+p,
+li {
+    font-size: large
+}
+
+h1 {
+    font-size: xx-large;
+    text-align: center;
+}
+
+h2 {
+    font-size: x-large;
+}
+
+a {
+    text-decoration: underline;
+}
+
