table is ok; backing it up

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,7 +14,7 @@ import colton from "../assets/colton.png";
                     src={colton}
                     alt="Colton Loftus"
                     title="Colton Loftus"
-                    class="rounded-full h-[12.5rem] w-[12.5rem] object-cover border-x-blue-400 dark:border-y-0 border-y-0 border-6"
+                    class="rounded-full h-[12.5rem] w-[12.5rem] object-cover border-blue-400 border-6"
                 />
             </div>
             <p class="mt-4 text-center text-2xl font-bold">Colton Loftus</p>
