--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,21 @@
 import Layout from "../layouts/Layout.astro";
 import { Image } from "astro:assets";
 import colton from "../assets/colton.png";
+
+import { library, icon } from "@fortawesome/fontawesome-svg-core";
+import {
+    faYoutube,
+    faGithub,
+    faLinkedin,
+} from "@fortawesome/free-brands-svg-icons";
+
+// Declare all the icons you plan on using
+library.add(faYoutube, faGithub, faLinkedin);
+
+// Instantiate the icon with the icon function
+const youtubeIcon = icon({ prefix: "fab", iconName: faYoutube.iconName });
+const githubIcon = icon({ prefix: "fab", iconName: faGithub.iconName });
+const linkedinIcon = icon({ prefix: "fab", iconName: faLinkedin.iconName });
 ---
 
 <Layout>
@@ -14,7 +29,7 @@ import colton from "../assets/colton.png";
                     src={colton}
                     alt="Colton Loftus"
                     title="Colton Loftus"
-                    class="rounded-full h-[12.5rem] w-[12.5rem] object-cover border-blue-400 border-6"
+                    class="rounded-full h-[12.5rem] w-[12.5rem] object-cover"
                 />
             </div>
             <p class="mt-4 text-center text-2xl font-bold">Colton Loftus</p>
@@ -24,6 +39,29 @@ import colton from "../assets/colton.png";
             <p class="mt-1 text-center text-lg max-w-[20rem] px-4">
                 Princeton CS '23
             </p>
+            <div class="flex justify-center space-x-4 pt-4 opacity-70">
+                <a
+                    href="https://www.youtube.com/@ColtonLoftus"
+                    title="YouTube"
+                    class="w-7 h-7"
+                >
+                    <span set:html={youtubeIcon.html} />
+                </a>
+                <a
+                    href="https://github.com/C-Loftus"
+                    class="w-6 h-6"
+                    title="GitHub"
+                >
+                    <span set:html={githubIcon.html} />
+                </a>
+                <a
+                    href="https://www.linkedin.com/in/coltonl/"
+                    class="w-6 h-6"
+                    title="LinkedIn"
+                >
+                    <span set:html={linkedinIcon.html} />
+                </a>
+            </div>
         </div>
     </div>
 </Layout>
