--- a/src/pages/writings.astro
+++ b/src/pages/writings.astro
@@ -32,33 +32,40 @@ function getPreview(text: string | undefined, wordCount = 10) {
 ---
 
 <Layout>
-  <h1>Writings</h1>
+  <h1 class="font-semibold pt-4">Writings</h1>
   <div class="flex justify-center">
     <div
       class="grid grid-cols-1 sm:grid-cols-1 lg:grid-cols-1 gap-6 p-4 max-w-2xl w-full"
     >
       {
-        posts.map((post) => (
-          <article>
-            <a
-              href={post.url}
-              class="relative !no-underline block rounded-2xl p-6 transition-all duration-200 ease-in-out transform bg-neutral-100 text-neutral-900 shadow-md hover:shadow-lg active:scale-95 dark:bg-neutral-700 dark:text-neutral-100 dark:shadow-black/30"
-            >
-              <h2 class="text-xl font-semibold mb-2">
-                {post.frontmatter.title}
-              </h2>
-              <p class="text-gray-600 dark:text-gray-300 mb-10">
-                {getPreview(post.frontmatter.summary)}
-              </p>
-              {/* <div class="absolute bottom-4 left-6 text-sm text-gray-500 dark:text-gray-400">
-              {post.readingTime}
-            </div> */}
-              <div class="absolute bottom-4 right-6 text-sm text-gray-500 dark:text-gray-400">
-                Last modified: {post.lastModified}
-              </div>
-            </a>
-          </article>
-        ))
+        posts
+          .sort(
+            (a, b) =>
+              new Date(b.frontmatter.date).getTime() -
+              new Date(a.frontmatter.date).getTime(),
+          )
+          .map((post) => (
+            <article>
+              <a
+                href={post.url}
+                class="relative !no-underline block rounded-2xl p-6 transition-all duration-200 ease-in-out transform bg-neutral-100 text-neutral-900 shadow-lg hover:shadow-xl active:scale-95 dark:bg-neutral-700 dark:text-neutral-100 dark:shadow-black/30"
+              >
+                <h2 class="text-xl !font-medium mb-2">
+                  {post.frontmatter.title}
+                </h2>
+                <p class="text-gray-600 dark:text-gray-300 mb-10">
+                  {getPreview(post.frontmatter.summary)}
+                </p>
+                <div class="absolute bottom-4 left-6 text-sm text-gray-500 dark:text-gray-400">
+                  Written{" "}
+                  {new Date(post.frontmatter.date).toISOString().split("T")[0]}
+                </div>
+                <div class="absolute bottom-4 right-6 text-sm text-gray-500 dark:text-gray-400">
+                  Last modified: {post.lastModified}
+                </div>
+              </a>
+            </article>
+          ))
       }
     </div>
   </div>
