--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,6 +10,10 @@ import Themes from "astro-themes";
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.ico" />
+		<meta
+			name="description"
+			content="The personal website of Colton Loftus"
+		/>
 		<meta name="generator" content={Astro.generator} />
 		<title>colton.place</title>
 		<Themes defaultTheme="dark" />
