--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,8 @@
 @import "tailwindcss";
 
+@import "starlight-site-graph/styles/variables.css";
+
+
 @custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
 ul {
