--- a/src/layouts/CenteredText.astro
+++ b/src/layouts/CenteredText.astro
@@ -10,20 +10,23 @@ const {
   <div
     class="[&>p]:text-left [&>p]:pt-7 [&>p]:text-xl max-w-3xl mx-auto p-6 sm:p-8 lg:p-12 [&>ul]:list-disc [&>h1]:pt-5 [&>h2]:pt-7 [&>h3]:pt-3 [&>h4]:pt-3"
   >
+    <slot />
     {
       date && (
-        <p class="text-gray-500 text-sm mt-2">
+        <time
+          class="text-gray-500 text-sm mt-2 text-center flex items-center justify-center pt-4"
+          datetime={new Date(date).toISOString()}
+        >
           Written
           {new Date(date).toLocaleDateString(undefined, {
             year: "numeric",
             month: "long",
             day: "numeric",
           })}
-        </p>
+        </time>
       )
     }
-    <slot />
-    <div class="wavyFooter max-w-3xl mx-auto pt-18"></div>
+    <div class="wavyFooter max-w-3xl mx-auto pt-10"></div>
   </div>
 </Layout>
 
