--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ const linkedinIcon = icon({ prefix: "fab", iconName: faLinkedin.iconName });
             </div>
             <p class="mt-4 text-center text-2xl font-bold">Colton Loftus</p>
             <p class="mt-4 text-center text-lg max-w-[20rem] px-4">
-                Geospatial Software Engineer
+                Software Engineer
             </p>
             <p class="mt-1 text-center text-lg max-w-[20rem] px-4">
                 Princeton CS '23
